slick append dots modified structure

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19750,184 +19750,6 @@ section.events-camp {
   overflow: hidden;
   background: url("../images/events-bg.png") no-repeat;
 }
-section.events-camp .events-camp-slider {
-  position: relative;
-  display: block;
-  width: 100%;
-  padding: 0 0 72px;
-  margin: 52px 0 0;
-  left: 148px;
-  /* Slick Arrows */
-  /* Slick Dots */
-}
-section.events-camp .events-camp-slider--item {
-  position: relative;
-  max-width: 483px;
-  padding: 0 15px;
-}
-section.events-camp .events-camp-slider--item a {
-  position: relative;
-  display: block;
-  width: 100%;
-  outline: none;
-  text-decoration: none;
-}
-section.events-camp .events-camp-slider--item a .img-holder {
-  position: relative;
-  display: block;
-  height: 300px;
-  width: 100%;
-  background-size: cover !important;
-}
-section.events-camp .events-camp-slider--item a .img-holder img {
-  width: 100%;
-  max-width: 483px;
-}
-section.events-camp .events-camp-slider--item a .title {
-  position: relative;
-  display: block;
-  padding: 17px 0 17px 15px;
-  color: #fff;
-  background: #ab1a2d;
-  font: 600 20px "Open Sans", sans-serif;
-  text-transform: uppercase;
-}
-section.events-camp .events-camp-slider--item a .title span {
-  position: absolute;
-  display: block;
-  top: 0;
-  right: 0;
-  width: 55px;
-  height: auto;
-  padding: 17px 0;
-  background: #841523;
-}
-section.events-camp .events-camp-slider--item a .title span i {
-  display: block;
-  width: 15px;
-  height: 28px;
-  margin: auto;
-  background: url("../images/sprite.png") no-repeat;
-  background-position: -190px -8px;
-}
-section.events-camp .events-camp-slider .slick-prev:hover,
-section.events-camp .events-camp-slider .slick-prev:focus,
-section.events-camp .events-camp-slider .slick-next:hover,
-section.events-camp .events-camp-slider .slick-next:focus {
-  opacity: 0.8;
-}
-section.events-camp .events-camp-slider .slick-prev {
-  background: url("../images/sprite.png") no-repeat;
-  background-position: -53px -46px;
-  width: 29px;
-  height: 24px;
-  font-size: 0;
-  border: none;
-  position: absolute;
-  top: 100%;
-  left: 30%;
-  cursor: pointer;
-  z-index: 9;
-  opacity: 0.4;
-}
-section.events-camp .events-camp-slider .slick-prev:hover {
-  opacity: 1;
-}
-section.events-camp .events-camp-slider .slick-prev::before {
-  display: none;
-}
-section.events-camp .events-camp-slider .slick-next {
-  background: url("../images/sprite.png") no-repeat;
-  background-position: -11px -46px;
-  width: 29px;
-  height: 24px;
-  font-size: 0;
-  border: none;
-  position: absolute;
-  top: 100%;
-  right: 52%;
-  cursor: pointer;
-  z-index: 9;
-  opacity: 0.4;
-}
-section.events-camp .events-camp-slider .slick-next:hover {
-  opacity: 1;
-}
-section.events-camp .events-camp-slider .slick-next::before {
-  display: none;
-}
-section.events-camp .events-camp-slider .slick-dots {
-  position: absolute;
-  bottom: -5px;
-  left: -200px;
-  display: block;
-  width: 100%;
-  padding: 0;
-  list-style: none;
-  text-align: center;
-}
-section.events-camp .events-camp-slider .slick-dots li {
-  position: relative;
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  margin: 0 10px;
-  padding: 0;
-  cursor: pointer;
-  border-radius: 100%;
-}
-section.events-camp .events-camp-slider .slick-dots li button {
-  background: transparent;
-  width: 10px;
-  height: 10px;
-  border: none;
-  font-size: 0;
-  line-height: 0;
-  display: inline-block;
-  cursor: pointer;
-  outline: none;
-  position: relative;
-  border-radius: 100%;
-}
-section.events-camp .events-camp-slider .slick-dots li button::before {
-  font-family: slick;
-  font-size: 6px;
-  line-height: 20px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 10px;
-  height: 10px;
-  opacity: 1;
-  background: #b6b7b7;
-  text-align: center;
-  content: "";
-  display: block;
-  -webkit-font-smoothing: antialiased;
-  border-radius: 100%;
-}
-section.events-camp .events-camp-slider .slick-dots li.slick-active button {
-  width: 22px;
-  height: 22px;
-}
-section.events-camp .events-camp-slider .slick-dots li.slick-active button:before {
-  background: #000000;
-  width: 10px;
-  height: 10px;
-  border-radius: 100%;
-}
-section.events-camp .events-camp-slider .slick-dots li.slick-active button:after {
-  content: "";
-  position: relative;
-  top: -11px;
-  left: -11px;
-  right: 0;
-  display: block;
-  border: 1px solid #000000;
-  width: 22px;
-  height: 22px;
-  border-radius: 100%;
-}
 section.become-member .content-text {
   position: relative;
   display: block;
@@ -22448,6 +22270,185 @@ section.page--media .search-member-directory {
 }
 .slider-mask__image img {
   -webkit-mask-box-image: url("../images/masking.png") 10;
+}
+
+.events-camp-parent-holder {
+  position: relative;
+}
+.events-camp-parent-holder .events-camp-slider {
+  position: relative;
+  display: block;
+  width: 100%;
+  padding: 0 0 72px;
+  margin: 52px 0 0;
+  left: 148px;
+}
+.events-camp-parent-holder .events-camp-slider--item {
+  position: relative;
+  max-width: 483px;
+  padding: 0 15px;
+}
+.events-camp-parent-holder .events-camp-slider--item a {
+  position: relative;
+  display: block;
+  width: 100%;
+  outline: none;
+  text-decoration: none;
+}
+.events-camp-parent-holder .events-camp-slider--item a .img-holder {
+  position: relative;
+  display: block;
+  height: 300px;
+  width: 100%;
+  background-size: cover !important;
+}
+.events-camp-parent-holder .events-camp-slider--item a .img-holder img {
+  width: 100%;
+  max-width: 483px;
+}
+.events-camp-parent-holder .events-camp-slider--item a .title {
+  position: relative;
+  display: block;
+  padding: 17px 0 17px 15px;
+  color: #fff;
+  background: #ab1a2d;
+  font: 600 20px "Open Sans", sans-serif;
+  text-transform: uppercase;
+}
+.events-camp-parent-holder .events-camp-slider--item a .title span {
+  position: absolute;
+  display: block;
+  top: 0;
+  right: 0;
+  width: 55px;
+  height: auto;
+  padding: 17px 0;
+  background: #841523;
+}
+.events-camp-parent-holder .events-camp-slider--item a .title span i {
+  display: block;
+  width: 15px;
+  height: 28px;
+  margin: auto;
+  background: url("../images/sprite.png") no-repeat;
+  background-position: -190px -8px;
+}
+.events-camp-parent-holder .slider-controls-two {
+  display: flex !important;
+  flex-wrap: wrap !important;
+  align-items: center;
+  /* Slick Arrows */
+  /* Slick Dots */
+}
+.events-camp-parent-holder .slider-controls-two .slick-prev:hover,
+.events-camp-parent-holder .slider-controls-two .slick-prev:focus,
+.events-camp-parent-holder .slider-controls-two .slick-next:hover,
+.events-camp-parent-holder .slider-controls-two .slick-next:focus {
+  opacity: 0.8;
+}
+.events-camp-parent-holder .slider-controls-two .slick-prev {
+  background: url("../images/sprite.png") no-repeat;
+  background-position: -53px -46px;
+  width: 29px;
+  height: 24px;
+  font-size: 0;
+  border: none;
+  cursor: pointer;
+  z-index: 9;
+  opacity: 0.4;
+}
+.events-camp-parent-holder .slider-controls-two .slick-prev:hover {
+  opacity: 1;
+}
+.events-camp-parent-holder .slider-controls-two .slick-prev::before {
+  display: none;
+}
+.events-camp-parent-holder .slider-controls-two .slick-next {
+  background: url("../images/sprite.png") no-repeat;
+  background-position: -11px -46px;
+  width: 29px;
+  height: 24px;
+  font-size: 0;
+  border: none;
+  cursor: pointer;
+  z-index: 9;
+  opacity: 0.4;
+}
+.events-camp-parent-holder .slider-controls-two .slick-next:hover {
+  opacity: 1;
+}
+.events-camp-parent-holder .slider-controls-two .slick-next::before {
+  display: none;
+}
+.events-camp-parent-holder .slider-controls-two .slick-dots {
+  bottom: -5px;
+  display: block;
+  width: 100%;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+}
+.events-camp-parent-holder .slider-controls-two .slick-dots li {
+  position: relative;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 10px;
+  padding: 0;
+  cursor: pointer;
+  border-radius: 100%;
+}
+.events-camp-parent-holder .slider-controls-two .slick-dots li button {
+  background: transparent;
+  width: 10px;
+  height: 10px;
+  border: none;
+  font-size: 0;
+  line-height: 0;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  border-radius: 100%;
+}
+.events-camp-parent-holder .slider-controls-two .slick-dots li button::before {
+  font-family: slick;
+  font-size: 6px;
+  line-height: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 10px;
+  height: 10px;
+  opacity: 1;
+  background: #b6b7b7;
+  text-align: center;
+  content: "";
+  display: block;
+  -webkit-font-smoothing: antialiased;
+  border-radius: 100%;
+}
+.events-camp-parent-holder .slider-controls-two .slick-dots li.slick-active button {
+  width: 22px;
+  height: 22px;
+}
+.events-camp-parent-holder .slider-controls-two .slick-dots li.slick-active button:before {
+  background: #000000;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+}
+.events-camp-parent-holder .slider-controls-two .slick-dots li.slick-active button:after {
+  content: "";
+  position: relative;
+  top: -11px;
+  left: -11px;
+  right: 0;
+  display: block;
+  border: 1px solid #000000;
+  width: 22px;
+  height: 22px;
+  border-radius: 100%;
 }
 
 .custom-radio,
