slick append dots modified structure fixing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22333,18 +22333,18 @@ section.page--media .search-member-directory {
   background: url("../images/sprite.png") no-repeat;
   background-position: -190px -8px;
 }
-.events-camp-parent-holder .slider-controls-two {
+.events-camp-parent-holder .slide-m-dots-two {
   position: relative;
   /* Slick Arrows */
   /* Slick Dots */
 }
-.events-camp-parent-holder .slider-controls-two .slick-prev:hover,
-.events-camp-parent-holder .slider-controls-two .slick-prev:focus,
-.events-camp-parent-holder .slider-controls-two .slick-next:hover,
-.events-camp-parent-holder .slider-controls-two .slick-next:focus {
+.events-camp-parent-holder .slide-m-dots-two .slick-prev:hover,
+.events-camp-parent-holder .slide-m-dots-two .slick-prev:focus,
+.events-camp-parent-holder .slide-m-dots-two .slick-next:hover,
+.events-camp-parent-holder .slide-m-dots-two .slick-next:focus {
   opacity: 0.8;
 }
-.events-camp-parent-holder .slider-controls-two .slick-prev {
+.events-camp-parent-holder .slide-m-dots-two .slick-prev {
   background: url("../images/sprite.png") no-repeat;
   background-position: -53px -46px;
   width: 29px;
@@ -22355,13 +22355,13 @@ section.page--media .search-member-directory {
   z-index: 9;
   opacity: 0.4;
 }
-.events-camp-parent-holder .slider-controls-two .slick-prev:hover {
+.events-camp-parent-holder .slide-m-dots-two .slick-prev:hover {
   opacity: 1;
 }
-.events-camp-parent-holder .slider-controls-two .slick-prev::before {
+.events-camp-parent-holder .slide-m-dots-two .slick-prev::before {
   display: none;
 }
-.events-camp-parent-holder .slider-controls-two .slick-next {
+.events-camp-parent-holder .slide-m-dots-two .slick-next {
   background: url("../images/sprite.png") no-repeat;
   background-position: -11px -46px;
   width: 29px;
@@ -22372,19 +22372,19 @@ section.page--media .search-member-directory {
   z-index: 9;
   opacity: 0.4;
 }
-.events-camp-parent-holder .slider-controls-two .slick-next:hover {
+.events-camp-parent-holder .slide-m-dots-two .slick-next:hover {
   opacity: 1;
 }
-.events-camp-parent-holder .slider-controls-two .slick-next::before {
+.events-camp-parent-holder .slide-m-dots-two .slick-next::before {
   display: none;
 }
-.events-camp-parent-holder .slider-controls-two .slick-dots {
+.events-camp-parent-holder .slide-m-dots-two .slick-dots {
   display: inline-block;
   padding: 0;
   list-style: none;
   text-align: center;
 }
-.events-camp-parent-holder .slider-controls-two .slick-dots li {
+.events-camp-parent-holder .slide-m-dots-two .slick-dots li {
   position: relative;
   display: inline-block;
   width: 10px;
