--- a/resources/assets/scss/components/_sliders.scss
+++ b/resources/assets/scss/components/_sliders.scss
@@ -282,7 +282,7 @@
             }
         }
     }
-    .slider-controls-two {
+    .slide-m-dots-two {
         position: relative;
         /* Slick Arrows */
         .slick-prev:hover,
