dots slider fixing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22345,7 +22345,6 @@ section.page--media .search-member-directory {
   position: inherit !important;
 }
 .events-camp-parent-holder .slide-m-dots-two {
-  position: relative;
   /* Slick Arrows */
   /* Slick Dots */
 }
@@ -22391,6 +22390,7 @@ section.page--media .search-member-directory {
 }
 .events-camp-parent-holder .slide-m-dots-two .slick-dots {
   display: inline-block;
+  bottom: 0 !important;
   padding: 0;
   list-style: none;
   text-align: center;
@@ -22403,6 +22403,58 @@ section.page--media .search-member-directory {
   margin: 0 10px;
   padding: 0;
   cursor: pointer;
+  border-radius: 100%;
+}
+.events-camp-parent-holder .slide-m-dots-two .slick-dots li button {
+  background: transparent;
+  width: 10px;
+  height: 10px;
+  border: none;
+  font-size: 0;
+  line-height: 0;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  border-radius: 100%;
+}
+.events-camp-parent-holder .slide-m-dots-two .slick-dots li button::before {
+  font-family: slick;
+  font-size: 6px;
+  line-height: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 10px;
+  height: 10px;
+  opacity: 1;
+  background: #b6b7b7;
+  text-align: center;
+  content: "";
+  display: block;
+  -webkit-font-smoothing: antialiased;
+  border-radius: 100%;
+}
+.events-camp-parent-holder .slide-m-dots-two .slick-dots li.slick-active button {
+  width: 22px;
+  height: 22px;
+}
+.events-camp-parent-holder .slide-m-dots-two .slick-dots li.slick-active button:before {
+  background: #000000;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+}
+.events-camp-parent-holder .slide-m-dots-two .slick-dots li.slick-active button:after {
+  content: "";
+  position: relative;
+  top: -11px;
+  left: -11px;
+  right: 0;
+  display: block;
+  border: 1px solid #000000;
+  width: 22px;
+  height: 22px;
   border-radius: 100%;
 }
 
