--- a/resources/assets/scss/components/_sliders.scss
+++ b/resources/assets/scss/components/_sliders.scss
@@ -294,7 +294,6 @@
         }
     }
     .slide-m-dots-two {
-        position: relative;
         /* Slick Arrows */
         .slick-prev:hover,
         .slick-prev:focus,
@@ -350,6 +349,7 @@
             // bottom: -5px;
             //  left: -200px;
             display: inline-block;
+            bottom: 0 !important;
             // width: 100%;
             padding: 0;
             list-style: none;
@@ -367,65 +367,65 @@
             -moz-border-radius: 100%;
             border-radius: 100%;
         }
-        // .slick-dots li button {
-        //     background: transparent;
-        //     width: 10px;
-        //     height: 10px;
-        //     border: none;
-        //     font-size: 0;
-        //     line-height: 0;
-        //     display: inline-block;
-        //     cursor: pointer;
-        //     outline: none;
-        //     position: relative;
-        //     -webkit-border-radius: 100%;
-        //     -moz-border-radius: 100%;
-        //     border-radius: 100%;
-        // }
-        // .slick-dots li button::before {
-        //     font-family: slick;
-        //     font-size: 6px;
-        //     line-height: 20px;
-        //     position: absolute;
-        //     top: 0;
-        //     left: 0;
-        //     width: 10px;
-        //     height: 10px;
-        //     opacity: 1;
-        //     background: #b6b7b7;
-        //     text-align: center;
-        //     content: '';
-        //     display: block;
-        //     -webkit-font-smoothing: antialiased;
-        //     -webkit-border-radius: 100%;
-        //     -moz-border-radius: 100%;
-        //     border-radius: 100%;
-        // }
-        // .slick-dots li.slick-active button {
-        //     width: 22px;
-        //     height: 22px;
-        // }
-        // .slick-dots li.slick-active button:before {
-        //     background: #000000;
-        //     width: 10px;
-        //     height: 10px;
-        //     -webkit-border-radius: 100%;
-        //     -moz-border-radius: 100%;
-        //     border-radius: 100%;
-        // }
-        // .slick-dots li.slick-active button:after {
-        //     content: '';
-        //     position: relative;
-        //     top: -11px;
-        //     left: -11px;
-        //     right: 0;
-        //     display: block;
-        //     border: 1px solid #000000;
-        //     width: 22px;
-        //     height: 22px;
-        //     -webkit-border-radius: 100%;
-        //     -moz-border-radius: 100%;
-        //     border-radius: 100%;
-        // }
+        .slick-dots li button {
+            background: transparent;
+            width: 10px;
+            height: 10px;
+            border: none;
+            font-size: 0;
+            line-height: 0;
+            display: inline-block;
+            cursor: pointer;
+            outline: none;
+            position: relative;
+            -webkit-border-radius: 100%;
+            -moz-border-radius: 100%;
+            border-radius: 100%;
+        }
+        .slick-dots li button::before {
+            font-family: slick;
+            font-size: 6px;
+            line-height: 20px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 10px;
+            height: 10px;
+            opacity: 1;
+            background: #b6b7b7;
+            text-align: center;
+            content: '';
+            display: block;
+            -webkit-font-smoothing: antialiased;
+            -webkit-border-radius: 100%;
+            -moz-border-radius: 100%;
+            border-radius: 100%;
+        }
+        .slick-dots li.slick-active button {
+            width: 22px;
+            height: 22px;
+        }
+        .slick-dots li.slick-active button:before {
+            background: #000000;
+            width: 10px;
+            height: 10px;
+            -webkit-border-radius: 100%;
+            -moz-border-radius: 100%;
+            border-radius: 100%;
+        }
+        .slick-dots li.slick-active button:after {
+            content: '';
+            position: relative;
+            top: -11px;
+            left: -11px;
+            right: 0;
+            display: block;
+            border: 1px solid #000000;
+            width: 22px;
+            height: 22px;
+            -webkit-border-radius: 100%;
+            -moz-border-radius: 100%;
+            border-radius: 100%;
+        }
     }
 }
