--- a/resources/assets/scss/components/_sliders.scss
+++ b/resources/assets/scss/components/_sliders.scss
@@ -231,6 +231,7 @@
         padding: 0 0 72px;
         margin: 52px 0 0;
         left: 148px;
+        padding-bottom: 0;
         &--item {
             position: relative;
             max-width: 483px;
@@ -301,6 +302,7 @@
         .slick-next:focus {
             opacity: 0.8;
         }
+        .slide-m-prev-two,
         .slick-prev {
             background: url('../images/sprite.png') no-repeat;
             background-position: -53px -46px;
@@ -322,6 +324,7 @@
                 display: none;
             }
         }
+        .slide-m-next-two,
         .slick-next {
             background: url('../images/sprite.png') no-repeat;
             background-position: -11px -46px;
