--- a/resources/assets/scss/components/_sliders.scss
+++ b/resources/assets/scss/components/_sliders.scss
@@ -284,12 +284,16 @@
         }
     }
     .slider-controls-two {
-        position: absolute;
-        bottom: -15%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        // position: absolute;
+        // bottom: -15%;
+        // width: 100%;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        width: auto !important;
+        display: inline-block;
+        position: relative;
+        margin-top: 35px;
         .slick-dots {
             position: inherit !important;
         }
@@ -310,7 +314,8 @@
             height: 24px;
             font-size: 0;
             border: none;
-            //  position: absolute;
+            position: absolute;
+            left: -20px;
             // top: 100%;
             // left: 32%;
             //  left: 30%;
@@ -332,7 +337,8 @@
             height: 24px;
             font-size: 0;
             border: none;
-            //  position: absolute;
+            position: absolute;
+            right: -20px;
             // top: 100%;
             // right: 54%;
             //  right: 52%;
