--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19996,182 +19996,6 @@ section.chapters .map iframe {
   -webkit-backface-visibility: hidden;
   /* Fix for transition flickering */
 }
-section .feat-members .feat-members-slider {
-  position: relative;
-  display: block;
-  width: 100%;
-  margin: 30px 0;
-  padding: 0 0 70px;
-  /* Slick Arrows */
-  /* Slick Dots */
-}
-section .feat-members .feat-members-slider--item {
-  position: relative;
-}
-section .feat-members .feat-members-slider--item a {
-  position: relative;
-  outline: none;
-  text-decoration: none;
-  width: 100%;
-  height: 100%;
-  display: block;
-}
-section .feat-members .feat-members-slider--item a .image-holder {
-  position: relative;
-  display: block;
-  width: 100%;
-  overflow: hidden;
-  background: #ab1a2d;
-  border-radius: 100%;
-  max-width: 250px;
-  height: 250px;
-  margin: auto;
-  transition: all 0.4s ease;
-}
-section .feat-members .feat-members-slider--item a .image-holder img {
-  opacity: 1;
-  transition: all 0.3s ease-in-out;
-}
-section .feat-members .feat-members-slider--item a .desc-txt {
-  position: relative;
-  display: block;
-  text-align: center;
-  margin-top: 20px;
-  transition: all 0.4s ease;
-}
-section .feat-members .feat-members-slider--item a .desc-txt .name {
-  color: #000;
-  font: 900 21px "Open Sans", sans-serif;
-  text-transform: uppercase;
-}
-section .feat-members .feat-members-slider--item a .desc-txt .chapter {
-  color: #ab1a2d;
-  font: 300 18px "Open Sans", sans-serif;
-  text-transform: uppercase;
-  font-weight: 500;
-}
-section .feat-members .feat-members-slider--item a:hover .image-holder img {
-  opacity: 0.7;
-}
-section .feat-members .feat-members-slider--item a:hover .image-holder {
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-  opacity: 0.8;
-}
-section .feat-members .feat-members-slider--item a:hover .desc-txt {
-  -webkit-transform: translate(0, -13px);
-          transform: translate(0, -13px);
-}
-section .feat-members .feat-members-slider .slick-prev:hover,
-section .feat-members .feat-members-slider .slick-prev:focus,
-section .feat-members .feat-members-slider .slick-next:hover,
-section .feat-members .feat-members-slider .slick-next:focus {
-  opacity: 0.8;
-}
-section .feat-members .feat-members-slider .slick-prev {
-  background: url("../images/sprite.png") no-repeat;
-  background-position: -53px -46px;
-  width: 29px;
-  height: 24px;
-  font-size: 0;
-  border: none;
-  position: absolute;
-  top: 100%;
-  left: 40%;
-  cursor: pointer;
-  z-index: 9;
-}
-section .feat-members .feat-members-slider .slick-prev::before {
-  display: none;
-}
-section .feat-members .feat-members-slider .slick-next {
-  background: url("../images/sprite.png") no-repeat;
-  background-position: -11px -46px;
-  width: 29px;
-  height: 24px;
-  font-size: 0;
-  border: none;
-  position: absolute;
-  top: 100%;
-  right: 40%;
-  cursor: pointer;
-  z-index: 9;
-}
-section .feat-members .feat-members-slider .slick-next::before {
-  display: none;
-}
-section .feat-members .feat-members-slider .slick-dots {
-  position: absolute;
-  bottom: -5px;
-  left: 0;
-  display: block;
-  width: 100%;
-  padding: 0;
-  list-style: none;
-  text-align: center;
-}
-section .feat-members .feat-members-slider .slick-dots li {
-  position: relative;
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  margin: 0 10px;
-  padding: 0;
-  cursor: pointer;
-  border-radius: 100%;
-}
-section .feat-members .feat-members-slider .slick-dots li button {
-  background: transparent;
-  width: 10px;
-  height: 10px;
-  border: none;
-  font-size: 0;
-  line-height: 0;
-  display: inline-block;
-  cursor: pointer;
-  outline: none;
-  position: relative;
-  border-radius: 100%;
-}
-section .feat-members .feat-members-slider .slick-dots li button::before {
-  font-family: slick;
-  font-size: 6px;
-  line-height: 20px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 10px;
-  height: 10px;
-  opacity: 1;
-  background: #b6b7b7;
-  text-align: center;
-  content: "";
-  display: block;
-  -webkit-font-smoothing: antialiased;
-  border-radius: 100%;
-}
-section .feat-members .feat-members-slider .slick-dots li.slick-active button {
-  width: 22px;
-  height: 22px;
-}
-section .feat-members .feat-members-slider .slick-dots li.slick-active button:before {
-  background: #000000;
-  width: 10px;
-  height: 10px;
-  border-radius: 100%;
-}
-section .feat-members .feat-members-slider .slick-dots li.slick-active button:after {
-  content: "";
-  position: relative;
-  top: -11px;
-  left: -11px;
-  right: 0;
-  display: block;
-  border: 1px solid #000000;
-  width: 22px;
-  height: 22px;
-  border-radius: 100%;
-}
 section .sponsors .sponsor-logo {
   position: absolute;
   top: -20px;
@@ -22362,7 +22186,7 @@ section.page--media .search-member-directory {
   font-size: 0;
   border: none;
   position: absolute;
-  left: -30px;
+  left: -55px;
   bottom: -18px;
   top: inherit;
   cursor: pointer;
@@ -22386,7 +22210,7 @@ section.page--media .search-member-directory {
   font-size: 0;
   border: none;
   position: absolute;
-  right: -30px;
+  right: -55px;
   bottom: -18px;
   top: inherit;
   cursor: pointer;
@@ -22459,6 +22283,205 @@ section.page--media .search-member-directory {
   border-radius: 100%;
 }
 .events-camp-parent-holder .slider-controls-two .slick-dots li.slick-active button:after {
+  content: "";
+  position: relative;
+  top: -11px;
+  left: -11px;
+  right: 0;
+  display: block;
+  border: 1px solid #000000;
+  width: 22px;
+  height: 22px;
+  border-radius: 100%;
+}
+
+.feat-members .feat-members-slider {
+  position: relative;
+  display: block;
+  width: 100%;
+  margin: 30px 0;
+  padding: 0 0 70px;
+}
+.feat-members .feat-members-slider--item {
+  position: relative;
+}
+.feat-members .feat-members-slider--item a {
+  position: relative;
+  outline: none;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.feat-members .feat-members-slider--item a .image-holder {
+  position: relative;
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  background: #ab1a2d;
+  border-radius: 100%;
+  max-width: 250px;
+  height: 250px;
+  margin: auto;
+  transition: all 0.4s ease;
+}
+.feat-members .feat-members-slider--item a .image-holder img {
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+}
+.feat-members .feat-members-slider--item a .desc-txt {
+  position: relative;
+  display: block;
+  text-align: center;
+  margin-top: 20px;
+  transition: all 0.4s ease;
+}
+.feat-members .feat-members-slider--item a .desc-txt .name {
+  color: #000;
+  font: 900 21px "Open Sans", sans-serif;
+  text-transform: uppercase;
+}
+.feat-members .feat-members-slider--item a .desc-txt .chapter {
+  color: #ab1a2d;
+  font: 300 18px "Open Sans", sans-serif;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.feat-members .feat-members-slider--item a:hover .image-holder img {
+  opacity: 0.7;
+}
+.feat-members .feat-members-slider--item a:hover .image-holder {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+  opacity: 0.8;
+}
+.feat-members .feat-members-slider--item a:hover .desc-txt {
+  -webkit-transform: translate(0, -13px);
+          transform: translate(0, -13px);
+}
+.feat-members .slider-controls-two {
+  width: auto !important;
+  display: inline-block;
+  position: relative;
+  margin-top: 35px;
+  /* Slick Arrows */
+  /* Slick Dots */
+}
+.feat-members .slider-controls-two .slick-dots {
+  position: inherit !important;
+}
+.feat-members .slider-controls-two .slick-prev:hover,
+.feat-members .slider-controls-two .slick-prev:focus,
+.feat-members .slider-controls-two .slick-next:hover,
+.feat-members .slider-controls-two .slick-next:focus {
+  opacity: 0.8;
+}
+.feat-members .slider-controls-two .slide-m-prev-two,
+.feat-members .slider-controls-two .slick-prev {
+  background: url("../images/sprite.png") no-repeat;
+  background-position: -53px -46px;
+  width: 29px;
+  height: 24px;
+  font-size: 0;
+  border: none;
+  position: absolute;
+  left: -55px;
+  bottom: -18px;
+  top: inherit;
+  cursor: pointer;
+  z-index: 9;
+  opacity: 0.4;
+}
+.feat-members .slider-controls-two .slide-m-prev-two:hover,
+.feat-members .slider-controls-two .slick-prev:hover {
+  opacity: 1;
+}
+.feat-members .slider-controls-two .slide-m-prev-two::before,
+.feat-members .slider-controls-two .slick-prev::before {
+  display: none;
+}
+.feat-members .slider-controls-two .slide-m-next-two,
+.feat-members .slider-controls-two .slick-next {
+  background: url("../images/sprite.png") no-repeat;
+  background-position: -11px -46px;
+  width: 29px;
+  height: 24px;
+  font-size: 0;
+  border: none;
+  position: absolute;
+  right: -55px;
+  bottom: -18px;
+  top: inherit;
+  cursor: pointer;
+  z-index: 9;
+  opacity: 0.4;
+}
+.feat-members .slider-controls-two .slide-m-next-two:hover,
+.feat-members .slider-controls-two .slick-next:hover {
+  opacity: 1;
+}
+.feat-members .slider-controls-two .slide-m-next-two::before,
+.feat-members .slider-controls-two .slick-next::before {
+  display: none;
+}
+.feat-members .slider-controls-two .slick-dots {
+  display: inline-block;
+  bottom: 0 !important;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+}
+.feat-members .slider-controls-two .slick-dots li {
+  position: relative;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 10px;
+  padding: 0;
+  cursor: pointer;
+  border-radius: 100%;
+}
+.feat-members .slider-controls-two .slick-dots li button {
+  background: transparent;
+  width: 10px;
+  height: 10px;
+  border: none;
+  font-size: 0;
+  line-height: 0;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  border-radius: 100%;
+}
+.feat-members .slider-controls-two .slick-dots li button::before {
+  font-family: slick;
+  font-size: 6px;
+  line-height: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 10px;
+  height: 10px;
+  opacity: 1;
+  background: #b6b7b7;
+  text-align: center;
+  content: "";
+  display: block;
+  -webkit-font-smoothing: antialiased;
+  border-radius: 100%;
+}
+.feat-members .slider-controls-two .slick-dots li.slick-active button {
+  width: 22px;
+  height: 22px;
+}
+.feat-members .slider-controls-two .slick-dots li.slick-active button:before {
+  background: #000000;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+}
+.feat-members .slider-controls-two .slick-dots li.slick-active button:after {
   content: "";
   position: relative;
   top: -11px;
