--- a/resources/assets/scss/components/_sliders.scss
+++ b/resources/assets/scss/components/_sliders.scss
@@ -285,12 +285,6 @@
         }
     }
     .slider-controls-two {
-        // position: absolute;
-        // bottom: -15%;
-        // width: 100%;
-        // display: flex;
-        // align-items: center;
-        // justify-content: center;
         width: auto !important;
         display: inline-block;
         position: relative;
@@ -314,7 +308,7 @@
             font-size: 0;
             border: none;
             position: absolute;
-            left: -30px;
+            left: -55px;
             bottom: -18px;
             top: inherit;
             // top: 100%;
@@ -339,7 +333,234 @@
             font-size: 0;
             border: none;
             position: absolute;
-            right: -30px;
+            right: -55px;
+            bottom: -18px;
+            top: inherit;
+            // top: 100%;
+            // right: 54%;
+            //  right: 52%;
+            cursor: pointer;
+            z-index: 9;
+            opacity: .4;
+            &:hover {
+                opacity: 1;
+            }
+            &::before {
+                display: none;
+            }
+        }
+        /* Slick Dots */
+        .slick-dots {
+            //  position: absolute;
+            // bottom: -5px;
+            //  left: -200px;
+            display: inline-block;
+            bottom: 0 !important;
+            // width: 100%;
+            padding: 0;
+            list-style: none;
+            text-align: center;
+        }
+        .slick-dots li {
+            position: relative;
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            margin: 0 10px;
+            padding: 0;
+            cursor: pointer;
+            -webkit-border-radius: 100%;
+            -moz-border-radius: 100%;
+            border-radius: 100%;
+        }
+        .slick-dots li button {
+            background: transparent;
+            width: 10px;
+            height: 10px;
+            border: none;
+            font-size: 0;
+            line-height: 0;
+            display: inline-block;
+            cursor: pointer;
+            outline: none;
+            position: relative;
+            -webkit-border-radius: 100%;
+            -moz-border-radius: 100%;
+            border-radius: 100%;
+        }
+        .slick-dots li button::before {
+            font-family: slick;
+            font-size: 6px;
+            line-height: 20px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 10px;
+            height: 10px;
+            opacity: 1;
+            background: #b6b7b7;
+            text-align: center;
+            content: '';
+            display: block;
+            -webkit-font-smoothing: antialiased;
+            -webkit-border-radius: 100%;
+            -moz-border-radius: 100%;
+            border-radius: 100%;
+        }
+        .slick-dots li.slick-active button {
+            width: 22px;
+            height: 22px;
+        }
+        .slick-dots li.slick-active button:before {
+            background: #000000;
+            width: 10px;
+            height: 10px;
+            -webkit-border-radius: 100%;
+            -moz-border-radius: 100%;
+            border-radius: 100%;
+        }
+        .slick-dots li.slick-active button:after {
+            content: '';
+            position: relative;
+            top: -11px;
+            left: -11px;
+            right: 0;
+            display: block;
+            border: 1px solid #000000;
+            width: 22px;
+            height: 22px;
+            -webkit-border-radius: 100%;
+            -moz-border-radius: 100%;
+            border-radius: 100%;
+        }
+    }
+}
+
+.feat-members {
+    p {
+        // font-size: 21px;
+    }
+    .feat-members-slider {
+        position: relative;
+        display: block;
+        width: 100%;
+        margin: 30px 0;
+        padding: 0 0 70px;
+        &--item {
+            position: relative;
+            a {
+                position: relative;
+                outline: none;
+                text-decoration: none;
+                width: 100%;
+                height: 100%;
+                display: block;
+                .image-holder {
+                    position: relative;
+                    display: block;
+                    width: 100%;
+                    // max-width: 268px;
+                    overflow: hidden;
+                    background: $color-secondary;
+                    -webkit-border-radius: 100%;
+                    -moz-border-radius: 100%;
+                    border-radius: 100%;
+                    max-width: 250px;
+                    height: 250px;
+                    margin: auto;
+                    @include transition(.4s);
+                    img {
+                        opacity: 1;
+                        -webkit-transition: all 0.3s ease-in-out;
+                        -moz-transition: all 0.3s ease-in-out;
+                        -ms-transition: all 0.3s ease-in-out;
+                        -o-transition: all 0.3s ease-in-out;
+                        transition: all 0.3s ease-in-out;
+                    }
+                }
+                .desc-txt {
+                    position: relative;
+                    display: block;
+                    text-align: center;
+                    margin-top: 20px;
+                    @include transition(.4s);
+                    .name {
+                        color: $color-black;
+                        font: 900 21px $font-primary;
+                        text-transform: uppercase;
+                    }
+                    .chapter {
+                        color: $color-secondary;
+                        font: 300 18px $font-primary;
+                        text-transform: uppercase;
+                        font-weight: 500;
+                    }
+                }
+                &:hover {
+                    .image-holder img {
+                        opacity: 0.7;
+                    }
+                    .image-holder {
+                        transform: scale(.9);
+                        opacity: .8;
+                    }
+                    .desc-txt {
+                        transform: translate(0, -13px);
+                    }
+                }
+            }
+        }
+    }
+    .slider-controls-two {
+        width: auto !important;
+        display: inline-block;
+        position: relative;
+        margin-top: 35px;
+        .slick-dots {
+            position: inherit !important;
+        }
+        /* Slick Arrows */
+        .slick-prev:hover,
+        .slick-prev:focus,
+        .slick-next:hover,
+        .slick-next:focus {
+            opacity: 0.8;
+        }
+        .slide-m-prev-two,
+        .slick-prev {
+            background: url('../images/sprite.png') no-repeat;
+            background-position: -53px -46px;
+            width: 29px;
+            height: 24px;
+            font-size: 0;
+            border: none;
+            position: absolute;
+            left: -55px;
+            bottom: -18px;
+            top: inherit;
+            // top: 100%;
+            // left: 32%;
+            //  left: 30%;
+            cursor: pointer;
+            z-index: 9;
+            opacity: .4;
+            &:hover {
+                opacity: 1;
+            }
+            &::before {
+                display: none;
+            }
+        }
+        .slide-m-next-two,
+        .slick-next {
+            background: url('../images/sprite.png') no-repeat;
+            background-position: -11px -46px;
+            width: 29px;
+            height: 24px;
+            font-size: 0;
+            border: none;
+            position: absolute;
+            right: -55px;
             bottom: -18px;
             top: inherit;
             // top: 100%;
