feature slider dot

--- a/resources/assets/scss/components/_sliders.scss
+++ b/resources/assets/scss/components/_sliders.scss
@@ -511,7 +511,7 @@
             }
         }
     }
-    .slider-controls-two {
+    &__slider-controls-two {
         width: auto !important;
         display: inline-block;
         position: relative;
