--- a/resources/assets/scss/components/_sliders.scss
+++ b/resources/assets/scss/components/_sliders.scss
@@ -526,7 +526,7 @@
         .slick-next:focus {
             opacity: 0.8;
         }
-        .slide-m-prev-two,
+        .feat-members-slider__slide-m-prev-two,
         .slick-prev {
             background: url('../images/sprite.png') no-repeat;
             background-position: -53px -46px;
@@ -551,7 +551,7 @@
                 display: none;
             }
         }
-        .slide-m-next-two,
+        .feat-members-slider__slide-m-next-two,
         .slick-next {
             background: url('../images/sprite.png') no-repeat;
             background-position: -11px -46px;
