--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22364,65 +22364,9 @@ section.page--media .search-member-directory {
   display: inline-block;
   position: relative;
   margin-top: 35px;
-  /* Slick Arrows */
-  /* Slick Dots */
 }
 .feat-members__slider-controls-two .slick-dots {
   position: inherit !important;
-}
-.feat-members__slider-controls-two .slick-prev:hover,
-.feat-members__slider-controls-two .slick-prev:focus,
-.feat-members__slider-controls-two .slick-next:hover,
-.feat-members__slider-controls-two .slick-next:focus {
-  opacity: 0.8;
-}
-.feat-members__slider-controls-two .feat-members-slider__slide-m-prev-two,
-.feat-members__slider-controls-two .slick-prev {
-  background: url("../images/sprite.png") no-repeat;
-  background-position: -53px -46px;
-  width: 29px;
-  height: 24px;
-  font-size: 0;
-  border: none;
-  position: absolute;
-  left: -55px;
-  bottom: -18px;
-  top: inherit;
-  cursor: pointer;
-  z-index: 9;
-  opacity: 0.4;
-}
-.feat-members__slider-controls-two .feat-members-slider__slide-m-prev-two:hover,
-.feat-members__slider-controls-two .slick-prev:hover {
-  opacity: 1;
-}
-.feat-members__slider-controls-two .feat-members-slider__slide-m-prev-two::before,
-.feat-members__slider-controls-two .slick-prev::before {
-  display: none;
-}
-.feat-members__slider-controls-two .feat-members-slider__slide-m-next-two,
-.feat-members__slider-controls-two .slick-next {
-  background: url("../images/sprite.png") no-repeat;
-  background-position: -11px -46px;
-  width: 29px;
-  height: 24px;
-  font-size: 0;
-  border: none;
-  position: absolute;
-  right: -55px;
-  bottom: -18px;
-  top: inherit;
-  cursor: pointer;
-  z-index: 9;
-  opacity: 0.4;
-}
-.feat-members__slider-controls-two .feat-members-slider__slide-m-next-two:hover,
-.feat-members__slider-controls-two .slick-next:hover {
-  opacity: 1;
-}
-.feat-members__slider-controls-two .feat-members-slider__slide-m-next-two::before,
-.feat-members__slider-controls-two .slick-next::before {
-  display: none;
 }
 .feat-members__slider-controls-two .slick-dots {
   display: inline-block;
@@ -22492,6 +22436,48 @@ section.page--media .search-member-directory {
   width: 22px;
   height: 22px;
   border-radius: 100%;
+}
+.feat-members__slide-m-next-two {
+  background: url("../images/sprite.png") no-repeat;
+  background-position: -11px -46px;
+  width: 29px;
+  height: 24px;
+  font-size: 0;
+  border: none;
+  position: absolute;
+  right: -55px;
+  bottom: -18px;
+  top: inherit;
+  cursor: pointer;
+  z-index: 9;
+  opacity: 0.4;
+}
+.feat-members__slide-m-next-two:hover {
+  opacity: 1;
+}
+.feat-members__slide-m-next-two::before {
+  display: none;
+}
+.feat-members__slide-m-prev-two {
+  background: url("../images/sprite.png") no-repeat;
+  background-position: -11px -46px;
+  width: 29px;
+  height: 24px;
+  font-size: 0;
+  border: none;
+  position: absolute;
+  right: -55px;
+  bottom: -18px;
+  top: inherit;
+  cursor: pointer;
+  z-index: 9;
+  opacity: 0.4;
+}
+.feat-members__slide-m-prev-two:hover {
+  opacity: 1;
+}
+.feat-members__slide-m-prev-two::before {
+  display: none;
 }
 
 .custom-radio,
