--- a/resources/assets/scss/components/_sliders.scss
+++ b/resources/assets/scss/components/_sliders.scss
@@ -519,71 +519,9 @@
         .slick-dots {
             position: inherit !important;
         }
-        /* Slick Arrows */
-        .slick-prev:hover,
-        .slick-prev:focus,
-        .slick-next:hover,
-        .slick-next:focus {
-            opacity: 0.8;
-        }
-        .feat-members-slider__slide-m-prev-two,
-        .slick-prev {
-            background: url('../images/sprite.png') no-repeat;
-            background-position: -53px -46px;
-            width: 29px;
-            height: 24px;
-            font-size: 0;
-            border: none;
-            position: absolute;
-            left: -55px;
-            bottom: -18px;
-            top: inherit;
-            // top: 100%;
-            // left: 32%;
-            //  left: 30%;
-            cursor: pointer;
-            z-index: 9;
-            opacity: .4;
-            &:hover {
-                opacity: 1;
-            }
-            &::before {
-                display: none;
-            }
-        }
-        .feat-members-slider__slide-m-next-two,
-        .slick-next {
-            background: url('../images/sprite.png') no-repeat;
-            background-position: -11px -46px;
-            width: 29px;
-            height: 24px;
-            font-size: 0;
-            border: none;
-            position: absolute;
-            right: -55px;
-            bottom: -18px;
-            top: inherit;
-            // top: 100%;
-            // right: 54%;
-            //  right: 52%;
-            cursor: pointer;
-            z-index: 9;
-            opacity: .4;
-            &:hover {
-                opacity: 1;
-            }
-            &::before {
-                display: none;
-            }
-        }
-        /* Slick Dots */
         .slick-dots {
-            //  position: absolute;
-            // bottom: -5px;
-            //  left: -200px;
             display: inline-block;
             bottom: 0 !important;
-            // width: 100%;
             padding: 0;
             list-style: none;
             text-align: center;
@@ -659,6 +597,51 @@
             -webkit-border-radius: 100%;
             -moz-border-radius: 100%;
             border-radius: 100%;
+        }
+    }
+    &__slide-m-next-two {
+        background: url('../images/sprite.png') no-repeat;
+        background-position: -11px -46px;
+        width: 29px;
+        height: 24px;
+        font-size: 0;
+        border: none;
+        position: absolute;
+        right: -55px;
+        bottom: -18px;
+        top: inherit;
+        // top: 100%;
+        // right: 54%;
+        //  right: 52%;
+        cursor: pointer;
+        z-index: 9;
+        opacity: .4;
+        &:hover {
+            opacity: 1;
+        }
+        &::before {
+            display: none;
+        }
+    }
+    &__slide-m-prev-two {
+        background: url('../images/sprite.png') no-repeat;
+        background-position: -11px -46px;
+        width: 29px;
+        height: 24px;
+        font-size: 0;
+        border: none;
+        position: absolute;
+        right: -55px;
+        bottom: -18px;
+        top: inherit;
+        cursor: pointer;
+        z-index: 9;
+        opacity: .4;
+        &:hover {
+            opacity: 1;
+        }
+        &::before {
+            display: none;
         }
     }
 }
