feature slider dot

--- a/resources/assets/scss/components/_sliders.scss
+++ b/resources/assets/scss/components/_sliders.scss
@@ -624,13 +624,13 @@
         }
         &__slide-m-prev-two {
             background: url('../images/sprite.png') no-repeat;
-            background-position: -11px -46px;
+            background-position: -53px -46px;
             width: 29px;
             height: 24px;
             font-size: 0;
             border: none;
             position: absolute;
-            right: -55px;
+            left: -55px;
             bottom: -18px;
             top: inherit;
             cursor: pointer;
