--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -1084,7 +1084,8 @@ ul.bullet-style {
     &__paragraph {
         border-bottom: 1px solid #ddd;
         margin-bottom: 25px;
-        padding-bottom: 10px;
+        // padding-bottom: 10px;
+        padding-bottom: 20px;
     }
     &__month {
         text-transform: uppercase;
