--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -218,6 +218,7 @@ header {
             padding: 10px 0 10px 50px;
             border-bottom-left-radius: 100px;
             height: 50px;
+            width: 800px !important;
             >ul {
                 display: block;
                 list-style: none;
