--- a/resources/assets/scss/components/_mobile-overwrite.scss
+++ b/resources/assets/scss/components/_mobile-overwrite.scss
@@ -94,6 +94,24 @@
     }
 }
 
+@media only screen and (max-width:1500px) {
+    .events-camp-parent-holder .events-camp-slider--item a .title {
+        padding: 15px !important;
+        font: 600 15px "Open Sans", sans-serif;
+        height: 55px;
+        text-align: left;
+        display: flex;
+        align-items: center;
+        padding-right: 65px !important;
+    }
+    .events-camp-parent-holder .events-camp-slider--item a .img-holder {
+        height: 250px
+    }
+    .become-member .img-holder {
+        width: 40%;
+    }
+}
+
 @media only screen and (max-width:1400px) {
     .banner__image-slide .item-left .banner-content-desc h2 {
         font-size: 50px;
