--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -218,7 +218,7 @@ header {
             padding: 10px 0 10px 50px;
             border-bottom-left-radius: 100px;
             height: 50px;
-            width: 800px !important;
+            // width: 800px !important;
             >ul {
                 display: block;
                 list-style: none;
@@ -239,11 +239,13 @@ header {
                 position: absolute;
                 background: #3b3d40;
                 width: 100%;
-                left: 0;
+                // left: 0;
                 top: 40px;
                 z-index: 999;
                 display: none;
                 padding: 20px;
+                left: -140px;
+                width: 800px;
                 ul {
                     list-style: none;
                     @include flex;
