--- a/resources/assets/scss/components/_mobile-overwrite.scss
+++ b/resources/assets/scss/components/_mobile-overwrite.scss
@@ -2,6 +2,9 @@
     .banner__image-slide .item-right::before {
         right: -70px;
     }
+    section.chapters .btn-wrap {
+        left: 0;
+    }
 }
 
 @media only screen and (max-width:1700px) {
