--- a/resources/assets/scss/pages/_dashboard.scss
+++ b/resources/assets/scss/pages/_dashboard.scss
@@ -348,11 +348,17 @@
     &--profile {
         background-position: -351px -224px;
     }
-    &--profile {
-        background-position: -351px -224px;
+    &--inbox {
+        background-position: -163px -282px;
+    }
+    &--membership {
+        background-position: -286px -283px;
     }
     &--location {
         background-position: -164px -345px;
+    }
+    &--support {
+        background-position: -345px -283px;
     }
     &--phone {
         background-position: -225px -345px;
