--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -128,6 +128,7 @@ section {
             color: $color-white;
             z-index: 2;
             margin-top: 20%;
+            padding-right: 25%;
             h2 {
                 color: $color-white;
                 // margin-bottom: 30px;
