--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24056,9 +24056,17 @@ section.page--media .search-member-directory {
   -webkit-transform: scale(1.1, 1.1);
   -o-transform: scale(1.1, 1.1);
 }
+.logo-display__single--detail {
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 25px;
+}
+.logo-display__single--detail h5 {
+  font-weight: bold;
+  text-transform: uppercase;
+}
 
 .sponsor-thumbnail {
-  height: 225px;
+  height: 210px;
   position: relative;
   display: flex !important;
   flex-wrap: wrap !important;
@@ -24066,7 +24074,13 @@ section.page--media .search-member-directory {
   justify-content: center;
   background: #fff;
   margin-bottom: 35px;
-  padding: 10%;
+  padding: 10px;
+}
+.sponsor-thumbnail a {
+  outline: 1px solid;
+  display: block;
+  width: 100%;
+  text-align: center;
 }
 .sponsor-thumbnail__badge {
   position: absolute;
