--- a/resources/assets/scss/components/_chapter-elements.scss
+++ b/resources/assets/scss/components/_chapter-elements.scss
@@ -278,18 +278,34 @@
         .sponsor-thumbnail__badge {
             @include transform_scale(1.1, 1.1);
         }
+        &--detail {
+            border-bottom: 1px solid #ddd;
+            margin-bottom: 25px;
+            h5 {
+                font-weight: bold;
+                text-transform: uppercase;
+            }
+        }
     }
 }
 
 .sponsor-thumbnail {
-    height: 225px;
+    // height: 225px;
+    height: 210px;
     position: relative;
     @include flex;
     @include flex-align-items(center);
     @include flex-justify-content(center);
     background: $color-white;
     margin-bottom: 35px;
-    padding: 10%;
+    // padding: 10%;
+    padding: 10px;
+    a {
+        outline: 1px solid;
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
     &__badge {
         position: absolute;
         width: 38px;
