--- a/resources/assets/scss/components/_chapter-elements.scss
+++ b/resources/assets/scss/components/_chapter-elements.scss
@@ -278,7 +278,17 @@
         .sponsor-thumbnail__badge {
             @include transform_scale(1.1, 1.1);
         }
-        &--detail {
+        &--item {
+            border-bottom: 1px solid #ddd;
+            margin-bottom: 25px;
+            h5 {
+                font-weight: bold;
+                text-transform: uppercase;
+            }
+        }
+    }
+    &__col3 {
+        &--item {
             border-bottom: 1px solid #ddd;
             margin-bottom: 25px;
             h5 {
